@@ -1,4 +1,5 @@
 0.8.0b7:
+  Distinguish between user/shared location.
   Fix missing event issue.
   Tidy capture code.
   Specify Python 3
